--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -44,3 +44,14 @@ tr.highlighted {
 table.interactive tbody tr {
     cursor: pointer;
 }
+
+/* Game */
+* {
+    padding: 0;
+    margin: 0;
+}
+canvas {
+    background: #eee;
+    display: block;
+    margin: 0 auto;
+}
